--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "mdbook-curly-quotes"
-version = "0.4.7"
-authors = ["Armin Häberling <armin.aha@gmail.com>"]
+name = "mdbook-emoji"
+version = "0.1.1"
+authors = ["Jon Richter <jon@allmende.io>"]
 edition = "2018"
-keywords = ["mdbook", "markdown"]
+keywords = ["mdbook", "markdown", "emoji"]
 license = "MPL-2.0"
 readme = "README.md"
-description = """mdBook preprocessor that replaces straight quotes with curly\
-quotes, except within code blocks or code spans."""
-repository = "https://github.com/arminha/mdbook-curly-quotes"
+description = """mdBook preprocessor that replaces colon-separated emoji short \
+codes with Unicode code points, except within code blocks or code spans."""
+repository = "https://github.com/almereyda/mdbook-emoji"
 
 [profile.release]
 lto = true
@@ -16,9 +16,11 @@ opt-level = "z"
 codegen-units = 1
 
 [dependencies]
-mdbook = { version = "0.4.10", default-features = false }
+emojis = "0.1.2"
+mdbook = { version = "0.4.12", default-features = false }
 pulldown-cmark = "0.7.2"
 pulldown-cmark-to-cmark = "4.0.2"
-semver = "1.0.3"
-serde_json = "1.0.64"
+regex = "1"
+semver = "1.0.4"
+serde_json = "1.0.66"
 structopt = "0.3.22"
